--- a/ui/Templates/admin_form.template.phtml
+++ b/ui/Templates/admin_form.template.phtml
@@ -30,8 +30,10 @@
             url: '/rest/get_session',
             success: function(session) {
                 if (!session.success)
-                {
                     location.href = '/home';
+                else {
+                    if (!session.data.user.is_admin)
+                        location.href = "/user";
                 }
             },
             async: false
