--- a/ui/Templates/user_form.template.phtml
+++ b/ui/Templates/user_form.template.phtml
@@ -21,11 +21,27 @@
     <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+
+    <script type="text/javascript">
+        $.ajax({
+            dataType: 'json',
+            url: '/rest/get_session',
+            success: function(session) {
+                if (!session.success)
+                    location.href = '/home';
+                else {
+                    if (session.data.user.is_admin)
+                        location.href = "/admin";
+                }
+            },
+            async: false
+        });
+    </script>
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
         <?php echo $_VIEW; ?>
 
     </div><!-- /.container -->
