--- a/ui/Views/admin.phtml
+++ b/ui/Views/admin.phtml
@@ -4,14 +4,14 @@
     </div>
     <span class="col-xs-6">
         <div class="btn-group pull-right">
-            <button  type="button" id="admin-user-btn" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            </button>
+            <button  type="button" id="user-btn" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Loading</button>
             <ul class="dropdown-menu pull-right">
                 <li><a href="/admin-add" id="file-sl">File Sick Leave</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Import Employee Details (CSV)</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="" id="logout">Logout</a></li>
             </ul>
         </div>
     </span>
@@ -33,8 +33,7 @@
     </div>
 </div>
 
-<script src="assets/3rd/js/admin.js" type="text/javascript">
-</script>
+<script src="assets/3rd/js/user.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     $('#chart-container').highcharts({
