--- a/ui/Templates/user.template.phtml
+++ b/ui/Templates/user.template.phtml
@@ -13,11 +13,11 @@
     <title>YouSick</title>
 
     <!-- jQuery -->
-    <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="<?= BASE_URL ?>assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
 
     <!-- Bootstrap core -->
-    <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <link href="<?= BASE_URL ?>assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
   </head>
 
   <body>
