--- a/ui/Templates/default.template.phtml
+++ b/ui/Templates/default.template.phtml
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from getbootstrap.com/examples/starter-template/ by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 06 Oct 2014 00:10:30 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- Mirrored from getbootstrap.com/examples/starter-template/ by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 06 Oct 2014 00:10:30 GMT -->
+    <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <title>YouSick</title>
+        <title>YouSick</title>
 
-    <!-- jQuery -->
-    <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
+        <!-- jQuery -->
+        <script src=""<?= BASE_URL ?>"assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
 
-    <!-- Bootstrap core -->
-    <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/3rd/bootstrap/dist/js/bootstrap-filestyle.min.js"> </script>
+        <!-- Bootstrap core -->
+        <link href="<?= BASE_URL ?>assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap-filestyle.min.js"></script>
 
-    <link href="assets/css/styles.css" rel="stylesheet">
+        <link href="<?= BASE_URL ?>assets/css/styles.css" rel="stylesheet" type="text/css">
 
-	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
-    <script src="assets/3rd/js/function.js" type="text/javascript"></script>
-	
-	<!-- Load local jQuery -->
-    <script src="assets/3rd/remodal/libs/jquery-loader.js"></script>
+        <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
+        <script src="<?= BASE_URL ?>assets/3rd/js/function.js" type="text/javascript"></script>
+
+        <!-- Load local jQuery -->
+        <script src="<?= BASE_URL ?>assets/3rd/remodal/libs/jquery-loader.js"></script>
 
 
-    <!-- Load local lib and tests -->
-    <link rel="stylesheet" href="assets/3rd/remodal/src/remodal.css">
-    <link rel="stylesheet" href="assets/3rd/remodal/src/remodal-default-theme.css">
-    <script src="assets/3rd/remodal/src/remodal.js"></script>
-    <style>
-      .remodal-overlay.without-animation.remodal-is-opening,
-      .remodal-overlay.without-animation.remodal-is-closing,
-      .remodal.without-animation.remodal-is-opening,
-      .remodal.without-animation.remodal-is-closing,
-      .remodal-bg.without-animation.remodal-is-opening,
-      .remodal-bg.without-animation.remodal-is-closing {
-        animation: none;
-      }
-    </style>
-  </head>
+        <!-- Load local lib and tests -->
+        <link rel="stylesheet" href="<?= BASE_URL ?>assets/3rd/remodal/src/remodal.css">
+        <link rel="stylesheet" href="<?= BASE_URL ?>assets/3rd/remodal/src/remodal-default-theme.css">
+        <script src="<?= BASE_URL ?>assets/3rd/remodal/src/remodal.js"></script>
+        <style>
+            .remodal-overlay.without-animation.remodal-is-opening,
+            .remodal-overlay.without-animation.remodal-is-closing,
+            .remodal.without-animation.remodal-is-opening,
+            .remodal.without-animation.remodal-is-closing,
+            .remodal-bg.without-animation.remodal-is-opening,
+            .remodal-bg.without-animation.remodal-is-closing {
+                animation: none;
+            }
+        </style>
+    </head>
 
-  <body class="admin-dashboard">
+    <body class="admin-dashboard">
 
-    <div class="container">
-        <?php echo $_VIEW; ?>
+        <div class="container">
+            <?php echo $_VIEW; ?>
 
-    </div><!-- /.container -->
+        </div><!-- /.container -->
 
 
 </html>
