--- a/ui/Templates/user_form.template.phtml
+++ b/ui/Templates/user_form.template.phtml
@@ -12,20 +12,20 @@
 
     <title>YouSick</title>
 
-    <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+    <link href="<?= BASE_URL ?>assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="<?= BASE_URL ?>bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
-    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="<?= BASE_URL ?>assets/css/styles.css" rel="stylesheet">
 
-    <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
-    <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="<?= BASE_URL ?>assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="<?= BASE_URL ?>bower_components/moment/min/moment.min.js"></script>
+    <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="<?= BASE_URL ?>bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript">
         $.ajax({
             dataType: 'json',
-            url: '/rest/get_session',
+            url: '<?= BASE_URL ?>rest/get_session',
             success: function(session) {
                 if (!session.success)
                     location.href = '/home';
