--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -13,7 +13,7 @@
     <title>YouSick</title>
 
     <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
+    <!-- <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css"> -->
     <link href="assets/css/styles.css" rel="stylesheet">
 
     <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
