--- a/ui/Templates/admin_form.template.phtml
+++ b/ui/Templates/admin_form.template.phtml
@@ -15,7 +15,7 @@
     <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" type="text/css" href="/bower_components/selectize/dist/css/selectize.bootstrap3.css" />
-    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
+    <!-- <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css"> -->
     <link href="assets/css/styles.css" rel="stylesheet">
 
     <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
