--- a/ui/Views/see-history.phtml
+++ b/ui/Views/see-history.phtml
@@ -1,12 +1,3 @@
-<!--div class="col-md-4 col-sm-6 col-xs-9 col-centered">
-    <div id="user-header" class="row">
-        <div id="name-wrapper">
-            <h2 id="name">Loading..</h2>
-        </div>
-		<p id="infos"></p>
-    </div>
-    <div class="vertical-space"></div>
-</div-->
 <div class="row header">
     <div class="col-xs-6">
         <a href="/admin"><h1 class="logo col-xs-6">YouSick</h1></a>
@@ -26,21 +17,26 @@
 <div class="col-md-4 col-sm-6 col-xs-9 col-centered">
     <div id="user-header" class="row">
         <div id="name-wrapper">
-            <h2 id="name">Loading...</h2>
-            <span class="pull-right">
-                <a href="http://localhost:8888/see-history">See history</a>
-            </span>
-			<p id="infos" style="font-size:20px;"></p>
+            <h2 id="name">Loading..</h2>
+            <label><strong>0/15</strong> Sick Leave Filed</label><br><br><br>
         </div>
+		<table id="infos" style="width:100%;">
+		  <tr>
+			<td><font size="6"><b>Sick Leave Filed </b></font></td>
+			<td><font size="6"><b>Reason</b></font></td>
+		  </tr>
+		  <tr>
+		  </tr>
+		  <tr>
+		  </tr>
+		</table>
     </div>
     <div class="vertical-space"></div>
 </div>
-
 <script type="text/javascript">
 	$(document).ready(function(){
 		var author_id;
 		var state;
-		var htmlText
 		$.ajax({
             dataType: 'json',
             url: '/rest/get_session',
@@ -48,8 +44,9 @@
                 if (session.success)
                 {
                     author_id = session.data.user.ID;
-                    htmlText = session.data.user.name + "  <span class='caret'></span>";
-					$('#user-btn').html(session.data.user.username + "  <span class='caret'></span>");
+                    var htmlText = session.data.user.name + "  <span class='caret'></span>"
+                    $('#name').html(htmlText)
+                    $('#user-btn').html(session.data.user.username + "  <span class='caret'></span>")
                 }
             }
         });
@@ -61,26 +58,11 @@
 				{
 					for(var i = 0; i < sickleaves.data.collection.length; i++)
 					{
-							
-						$('#name').html(htmlText);
-						var row = sickleaves.data.collection[i];
-						console.log(row.ID);
-						if(row.ID==<?= $_GET["id"]; ?>)
-						{
-							if(row.author_id.name != row.for_id.name)
-							{
-								$('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br><br>Filed On: " + row.author_id.created_on + "<br>Filed by: " + row.author_id.name + "<br>From: " + row.author_id.department );
-							}
-							else
-							{
-								$('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br>Filed On: " + row.author_id.created_on );
-							}
-							break;
-						}
-						else
-						{
-							$('#name').text("No Record");
-						}	
+						 var row = sickleaves.data.collection[i];
+						 if(author_id==row.for_id.ID)
+						 {
+							$('#infos').append('<tr><td><a href="http://localhost:8888/view-sickleave?id=' + row.ID + '"><font size="5">' + row.for_id.created_on + '</font></a></td><td><font size="5">' + row.reason + '</font></td></tr>');
+						 }
 					}
 				}
 			}
