--- a/ui/Templates/default.template.phtml
+++ b/ui/Templates/default.template.phtml
@@ -13,7 +13,7 @@
         <title>YouSick</title>
 
         <!-- jQuery -->
-        <script src=""<?= BASE_URL ?>"assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
+        <script src="<?= BASE_URL ?>assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
 
         <!-- Bootstrap core -->
         <link href="<?= BASE_URL ?>assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
