--- a/ui/Templates/admin_form.template.phtml
+++ b/ui/Templates/admin_form.template.phtml
@@ -47,5 +47,23 @@
 
 </div><!-- /.container -->
 
+<script src="<?= BASE_URL ?>assets/3rd/js/user.js" type="text/javascript"></script>
+<script type="text/javascript">
+    // Bind Logout
+    $('#logout').click(function(e) {
+        $.ajax({
+            url: '<?= BASE_URL ?>rest/logout_session',
+            contentType: 'json',
+            method: 'POST',
+            success: function(response) {
+                if (response.success)
+                {
+                    window.location = '<?= BASE_URL ?>';
+                }
+            }
+        });
+    });
+
+</script>
 
 </html>
