--- a/ui/Views/user/history.phtml
+++ b/ui/Views/user/history.phtml
@@ -18,17 +18,18 @@
     <div id="user-header" class="row">
         <div id="name-wrapper">
             <h2 id="name">Loading..</h2>
-            <label><strong>0/15</strong> Sick Leave Filed</label><br><br><br>
+            <label><strong id="sickleave-stat">0/15</strong> sick leave filed</label><br><br><br>
         </div>
         <table id="infos" style="width:100%;">
             <tr>
-                <td><font size="6"><b>Sick Leave Filed </b></font></td>
+                <td><font size="6"><b>Date filed </b></font></td>
                 <td><font size="6"><b>Target date</b></font></td>
                 <td><font size="6"><b>Reason</b></font></td>
             </tr>
             <tr>
                 <td colspan="3"><hr></td>
             </tr>
+            <tr id="loading-history"><td colspan="3" align="center"><h3><br>Loading...</h3></td></tr>
         </table>
     </div>
     <div class="vertical-space"></div>
@@ -50,15 +51,18 @@
                 }
             }
         });
+
+
         $.ajax({
             url: '/rest/view_sickleaves',
             method: 'post',
             data: {
-                'username' : '<?= \Utilities\Session::Initialize()->getUser()->getUsername() ?>'
+                'username': '<?= \Utilities\Session::Initialize()->getUser()->getUsername() ?>'
             },
             success: function (sickleaves) {
                 if (sickleaves.success)
                 {
+                    $('#loading-history').hide();
                     for (var i = 0; i < sickleaves.data.collection.length; i++)
                     {
                         var row = sickleaves.data.collection[i];
@@ -66,9 +70,14 @@
                         {
                             $('#infos').append('<tr><td><a href="http://localhost:8888/user/view-sickleave?id=' + row.ID + '"><font size="4px">' + row.created_on + '</font></a></td>'
                                     + '<td><font size="4px">' + row.date + '</font></td>'
-                                    + '<td><font size="4px">'+ row.reason + '</font></td></tr>');
+                                    + '<td><font size="4px">' + row.reason + '</font></td></tr>');
                         }
                     }
+                }
+                else
+                {
+                    $('#loading-history').show();
+                    $('#loading-history td hr').html('<br>Network failure');
                 }
             }
         });
@@ -88,5 +97,24 @@
                 }
             }
         });
+    });
+
+    // Load stats counter
+    $('#sickleave-stat').text('[ loading ]');
+    $.ajax({
+        url: '<?= BASE_URL ?>rest/counters/sickleave_stats',
+        data: {
+            'username': '<?= \Utilities\Session::Initialize()->getUser()->getUsername() ?>'
+        },
+        method: 'post',
+        success: function (response) {
+            if (response.success)
+            {
+                $('#sickleave-stat').text(response.data.used + '/' + response.data.remaining);
+            } else
+            {
+                $('#sickleave-stat').text('[ network error ]');
+            }
+        }
     });
 </script>
