--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -19,6 +19,10 @@
         <script src="<?= BASE_URL ?>assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
         <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="<?= BASE_URL ?>bower_components/highcharts/highcharts.js" type="text/javascript" ></script>
+        <script src="<?= BASE_URL ?>bower_components/highcharts/modules/exporting.js" type="text/javascript" ></script>
+        <script src="<?= BASE_URL ?>bower_components/highcharts/modules/offline-exporting.js" type="text/javascript" ></script>
+<script src="//a----.github.io/highcharts-export-clientside/bower_components/export-csv/export-csv.js"></script>
+        <script src="<?= BASE_URL ?>bower_components/highcharts/highcharts-export-clientside/highcharts-export-clientside.js" type="text/javascript" ></script>
 
         <script type="text/javascript">
             window.BASE_URL = "<?= BASE_URL ?>";
