--- a/ui/Views/view-sickleave.phtml
+++ b/ui/Views/view-sickleave.phtml
@@ -3,7 +3,7 @@
         <div id="name-wrapper">
             <h2 id="name">Loading..</h2>
         </div>
-		<p id="infos"></p>
+                <p id="infos"></p>
     </div>
     <div class="vertical-space"></div>
 </div-->
@@ -30,76 +30,74 @@
             <span class="pull-right">
                 <a href="http://localhost:8888/see-history">See history</a>
             </span>
-			<p id="infos" style="font-size:20px;"></p>
+            <p id="infos" style="font-size:20px;"></p>
         </div>
     </div>
     <div class="vertical-space"></div>
 </div>
 
 <script type="text/javascript">
-	$(document).ready(function(){
-		var author_id;
-		var state;
-		var htmlText
-		$.ajax({
+    $(document).ready(function () {
+        var author_id;
+        var state;
+        var htmlText
+        $.ajax({
             dataType: 'json',
             url: '/rest/get_session',
-            success: function(session) {
+            success: function (session) {
                 if (session.success)
                 {
                     author_id = session.data.user.ID;
                     htmlText = session.data.user.name + "  <span class='caret'></span>";
-					$('#user-btn').html(session.data.user.username + "  <span class='caret'></span>");
+                    $('#user-btn').html(session.data.user.username + "  <span class='caret'></span>");
                 }
             }
         });
-		$.ajax({
-			dataType: 'json',
-			url: '/rest/view_sickleaves',
-			success: function(sickleaves) {
-				if (sickleaves.success)
-				{
-					for(var i = 0; i < sickleaves.data.collection.length; i++)
-					{
-							
-						$('#name').html(htmlText);
-						var row = sickleaves.data.collection[i];
-						console.log(row.ID);
-						if(row.ID==<?= $_GET["id"]; ?>)
-						{
-							if(row.author_id.name != row.for_id.name)
-							{
-								$('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br><br>Filed On: " + row.author_id.created_on + "<br>Filed by: " + row.author_id.name + "<br>From: " + row.author_id.department );
-							}
-							else
-							{
-								$('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br>Filed On: " + row.author_id.created_on );
-							}
-							break;
-						}
-						else
-						{
-							$('#name').text("No Record");
-						}	
-					}
-				}
-			}
-		});
-	});
-	// Bind Logout
-		$('#logout').click(function(e) {
-			e.preventDefault();
+        $.ajax({
+            dataType: 'json',
+            url: '/rest/view_sickleaves',
+            success: function (sickleaves) {
+                if (sickleaves.success)
+                {
+                    for (var i = 0; i < sickleaves.data.collection.length; i++)
+                    {
 
-			$.ajax({
-				url: '<?= BASE_URL ?>rest/logout_session',
-				contentType: 'json',
-				method: 'POST',
-				success: function(response) {
-					if (response.success)
-					{
-						window.location = '<?= BASE_URL ?>';
-					}
-				}
-			});
-		});
+                        $('#name').html(htmlText);
+                        var row = sickleaves.data.collection[i];
+                        console.log(row.ID);
+                        if (row.ID ==<?= $_GET["id"]; ?>)
+                        {
+                            if (row.author_id.name != row.for_id.name)
+                            {
+                                $('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br><br>Filed On: " + row.author_id.created_on + "<br>Filed by: " + row.author_id.name + "<br>From: " + row.author_id.department);
+                            } else
+                            {
+                                $('#infos').append("Sick Leave ID: " + row.ID + "<br>From: " + row.for_id.department + "<br>Reason: " + row.reason + "<br>Filed On: " + row.author_id.created_on);
+                            }
+                            break;
+                        } else
+                        {
+                            $('#name').text("No Record");
+                        }
+                    }
+                }
+            }
+        });
+    });
+    // Bind Logout
+    $('#logout').click(function (e) {
+        e.preventDefault();
+
+        $.ajax({
+            url: '<?= BASE_URL ?>rest/logout_session',
+            contentType: 'json',
+            method: 'POST',
+            success: function (response) {
+                if (response.success)
+                {
+                    window.location = '<?= BASE_URL ?>';
+                }
+            }
+        });
+    });
 </script>
