--- a/ui/Views/admin/new-sickleave.phtml
+++ b/ui/Views/admin/new-sickleave.phtml
@@ -136,6 +136,7 @@
 
     $('#file-sl-btn').click(function (e) {
         e.preventDefault();
+
         var jsDate = new Date($('#date').val());
         var date = moment(jsDate).format('YYYY-MM-DD');
         $('#date').val(date);
@@ -151,6 +152,7 @@
                 if (retData.success)
                 {
                     alert("Success: " + retData.message);
+                    window.location.reload();
                 } else {
                     if (retData.has_state && !retData.data.state.success)
                         alert("Failed: " + retData.data.state.message);
