Fixed back-end statistical counting on sick-leave

--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -55,11 +55,14 @@
                         <button  type="button" id="user-btn" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Loading</button>
                         <ul class="dropdown-menu pull-right">
-                            <li><a href="<?= BASE_URL ?>admin/new-sickleave" id="file-sl">File Sick Leave</a></li>
+                            <li><a href="<?= BASE_URL ?>admin/new-sickleave" id="file-sl">
+                                    <span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;File Sick Leave</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="<?= BASE_URL ?>admin/import-csv">Import Employee Details (CSV)</a></li>
+                            <li><a href="<?= BASE_URL ?>admin/import-csv">
+                                    <span class="glyphicon glyphicon-upload"></span>&nbsp;&nbsp;Import Employee Details (CSV)</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="" id="logout">Logout</a></li>
+                            <li><a href="" id="logout">
+                                    <span class="glyphicon glyphicon-log-out"></span>&nbsp;&nbsp;Logout</a></li>
                         </ul>
                     </div>
                 </span>
