--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -15,7 +15,8 @@
         <link href="<?= BASE_URL ?>assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
         <link href="<?= BASE_URL ?>assets/css/styles.css" rel="stylesheet">
-
+        <link href="<?= BASE_URL ?>assets/css/spinner.css" rel="stylesheet">
+        
         <script src="<?= BASE_URL ?>assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
         <script src="<?= BASE_URL ?>assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="<?= BASE_URL ?>bower_components/highcharts/highcharts.js" type="text/javascript" ></script>
